samples/_failures_safe/1761615709_935686_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1d836929.c: In function ‘main’:
./samples/SAFE/__tmp_1d836929.c:151:5: error: expected identifier or ‘(’ at end of input
  151 |     int nodes, edges,
      |     ^~~
./samples/SAFE/__tmp_1d836929.c:151:5: error: expected declaration or statement at end of input
